--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,5 +10,6 @@
 </head>
 <body>
     <h1>Heading</h1>
+    <img src="{% static 'todo/images/img.png'' %}" alt="">
 </body>
 </html>
