--- a/todo/templates/todo/contact.html
+++ b/todo/templates/todo/contact.html
@@ -1,5 +1,35 @@
 {% extends 'todo/base.html' %}
 
 {% block content %}
-    <p>This is the Contact page</p>
+    <div class="container">
+        <div class="row">
+            <form action="{% url 'contact' %}" method="post" >
+                {% csrf_token %}
+                <!-- 2 column grid layout with text inputs for the first and last names -->
+                <div class="row mb-4">
+                  <div class="col">
+                    <div class="form-outline">
+                      <input type="text" id="form3Example1" name="first_name" class="form-control" />
+                      <label class="form-label" for="form3Example1">First name</label>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="form-outline">
+                      <input type="text" id="form3Example2" name="last_name" class="form-control" />
+                      <label class="form-label" for="form3Example2">Last name</label>
+                    </div>
+                  </div>
+                </div>
+              
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                  <input type="age" id="form3Example3" name="student_age" class="form-control" />
+                  <label class="form-label" for="form3Example3">Age</label>
+                </div>
+              
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary btn-block pull-right">Sign up</button>
+              </form>
+        </div>
+    </div>
 {% endblock %}
